# harvest

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/harvest-cli/: Cargo.toml
crates/harvest-cli/src/: main.rs
crates/harvest-core/: Cargo.toml
crates/harvest-core/src/: copy.rs  filter.rs  hash.rs  journal.rs  lib.rs  manifest.rs  run.rs  scan.rs  template.rs
desktop/: index.html
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
scripts/: gen-icon.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
