[package]
name = "harvest-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "harvest"
path = "src/main.rs"

[dependencies]
harvest-core = { path = "../harvest-core" }
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
time.workspace = true
