[package]
name = "harvest-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
xxhash-rust.workspace = true
md-5.workspace = true
walkdir.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

# File-owner lookup is platform-specific.
[target.'cfg(unix)'.dependencies]
file-owner = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
