[package]
name = "harvest-desktop"
version = "0.1.0"
description = "Harvest — verified media ingest"
authors = ["Rolando"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "harvest_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
harvest-core = { path = "../../../crates/harvest-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
